--- a/content/03/02g_commontasks.ipynb
+++ b/content/03/02g_commontasks.ipynb
@@ -6,7 +6,12 @@
    "source": [
     "# Common tasks\n",
     "\n",
-    "This page is kind of long. (It's got a lot of useful info!) Use the page's table of contents to the right to jump to what you're looking for. "
+    "```{important}\n",
+    "\n",
+    "Yes, this page is kind of long. But that's because it has a lot of useful info!\n",
+    "\n",
+    "Use the page's table of contents to the right to jump to what you're looking for. \n",
+    "```"
    ]
   },
   {
@@ -694,35 +699,104 @@
     "- `.assign(lev = lambda x: (x['dltt']+x['dlc'])/x['at']  )`\n",
     "- `.groupby('industry').assign(avglev = lambda x: x['lev'].mean()  )`\n",
     "\n",
-    "What is that \"lambda\" and why is it there?  Well, when you get to the \"assign\" step, what you would do to reference a variable is type the dataframe name and the variable name. \n",
+    "Q1: What is that \"lambda\"?\n",
     "\n",
-    "_But often, the dataframe object doesn't exist in memory yet and so it has no name._ \n",
+    "A1: A lambda function is an anonymous function that is usually one line and usually defined without a name. You write it like this:\n",
     "\n",
-    "In the example above, `[df].groupby('industry').assign(avglev = lambda x: x['lev'].mean()  )`, pandas splits the dataframe into groups, within each group applies a function (here: the mean), and then returns a new dataframe with one observation for each group (the average leverage for the industry). Visually, this **split-apply-combine**[^ref] process looks like this:\n",
+    "```py\n",
+    "lambda <list the input(s)>: <expression that uses the inputs to make an output>\n",
+    "```\n",
+    "\n",
+    "Here, you can see how the lambda function takes inputs and creates output the same way a function does:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dumb_prog = lambda a: a + 10     # I added \"dumb_prog =\" to name the lambda function and use it\n",
+    "dumb_prog(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we could define a fnc to do the exact same thing\n",
+    "def dumb_prog(a):\n",
+    "    return a + 10\n",
+    "dumb_prog(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q2: Why is that lambda there? \n",
+    "\n",
+    "A2: We use lambdas when we need a function for a short period of time and when the name of the function doesn't matter. \n",
+    "\n",
+    "<!-- Let's go back to this bit of code: `.groupby('industry').assign(avglev = lambda x: x['lev'].mean()  )`\n",
+    "\n",
+    "When you get to the \"assign\" step, what you would do to reference a variable is type the dataframe's name and the variable's name. _But `df.groupby('industry')` is a different dataframe than `df`! And when the code starts to execute the `.assign` method, the `df.groupby('industry')` doesn't exist in memory yet and so it has no name!_  \n",
+    " -->\n",
+    " \n",
+    "In the example above, `[df].groupby('industry').assign(avglev = lambda x: x['lev'].mean()  )`, \n",
+    "1. groupby **splits** the dataframe into groups, \n",
+    "2. then, within each group, it **applies** a function (here: the mean), \n",
+    "3. and then returns a new dataframe with one observation for each group (the average leverage for the industry). Visually, this **split-apply-combine**[^ref] process looks like this:\n",
     "\n",
     "![](https://jakevdp.github.io/PythonDataScienceHandbook/figures/03.08-split-apply-combine.png)\n",
     "\n",
     "[^ref]: (This figure is yet another resource I'm borrowing from the awesome [PythonDataScienceHandbook](https://jakevdp.github.io/PythonDataScienceHandbook). \n",
     "\n",
-    "So, the `.assign()` portion is working on these tiny pieces of the dataframe. Those pieces are dataframe objects that don't have names! \n",
+    "But notice! The `.assign()` portion is working on these tiny split up pieces of the dataframe created by `df.groupby('industry')`. Those pieces are dataframe objects that don't have names! \n",
     "\n",
-    "**So how do you refer to an unnamed dataframe object?**\n",
-    "\n",
-    "Answer: Lambda functions. When you type `<some df object>.assign(newVar = lambda x: someFunc(x))`, `x` is the object (\"some df object\") that assign is working on. Ta da!\n",
+    "**So lambda functions let us refer to an unnamed dataframe objects!** When you type `<some df object, like df.groupby()>.assign(newVar = lambda x: someFunc(x))`, `x` is the object (\"some df object\") that assign is working on. Ta da!\n",
     "\n",
     "```python\n",
     "# common syntax within pandas\n",
     ".assign(<newvarname> = lambda <tempnameforpriorobj>:  <do stuff to tempnameforpriorobj>   )       \n",
     "\n",
     "# often, tempname is just \"x\" for short\n",
-    ".assign(<newvarname> = lambda x: <someFunc(x)> )       \n",
+    ".assign(<newvarname> = lambda x: <someFunc(x)> )      \n",
+    "\n",
+    "# example:\n",
+    ".assign(lev = lambda x: (x['dltt']+x['dlc'])/x['at'] )\n",
     "\n",
     "```\n",
     "\n",
     "```{note}\n",
-    "It turns out that lambda functions are very useful in python programming, and not just within pandas. But pandas is where we will use them most in this class.\n",
-    "```\n",
-    "\n"
+    "It turns out that lambda functions are very useful in python programming, and not just within pandas. For example, some functions take functions as inputs, like [csnap()](#printing-inside-of-chains), `map()`, and `filter()`, and lambda functions lets us give them custom functions quickly. \n",
+    "\n",
+    "But pandas is where we will use lambda functions most in this class.\n",
+    "```"
    ]
   },
   {
@@ -745,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +1044,7 @@
        "C       9"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1087,9 +1161,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `.pipe()`\n",
+    "## Using non-pandas functions inside chains \n",
     "\n",
-    "One problem with chains on dataframes is that you can only use methods that work on the object (a dataframe) that is getting chained. \n",
+    "One problem with writing chains on dataframes is that you can only use methods that work on the object (a dataframe) that is getting chained. \n",
     "\n",
     "So for example, you've formatted dataframe to plot. You can't directly add a seaborn function to the chain: _Seaborn functions are methods of the package seaborn, not the dataframe._ (It's `sns.lmplot`, not `df.lmplot`.) \n",
     "\n",
@@ -1153,7 +1227,7 @@
     "```{tip}\n",
     "One thing about chains, is that sometimes it's hard to know what's going on within them without just commenting out all the code and running it bit-by-bit. \n",
     "\n",
-    "This function will let you print messages from inside the chain, by exploiting the `.pipe()` function we just covered!\n",
+    "This function, `csnap` (meaning \"C\"hain \"SNAP\"shot) will let you print messages from inside the chain, by exploiting the `.pipe()` function we just covered!\n",
     "```\n",
     "\n",
     "![](https://media.giphy.com/media/Buy7YdhkyHBCM/source.gif)\n",
@@ -1163,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1262,13 +1336,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>1.870829</td>\n",
+       "      <th>max</th>\n",
+       "      <td>6.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>2.250000</td>\n",
+       "      <th>min</th>\n",
+       "      <td>1.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1276,9 +1350,9 @@
        "</div>"
       ],
       "text/plain": [
-       "         data  ones\n",
-       "std  1.870829     1\n",
-       "25%  2.250000     1"
+       "     data  ones\n",
+       "max   6.0     1\n",
+       "min   1.0     1"
       ]
      },
      "metadata": {},
@@ -1384,7 +1458,7 @@
        "max    6.000000     1     2       3"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
