--- a/content/03/02h_exercises.ipynb
+++ b/content/03/02h_exercises.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "Try these and compare to a friend. There are many ways to solve each, so if your approaches differ, explain it to each other!\n",
     "\n",
-    "The answers are available.[^here]\n",
+    "<!-- The answers are available.[^here]\n",
     "\n",
-    "[^here]: [Here they are.](02i_answers)"
+    "[^here]: [Here they are.](02i_answers) -->"
    ]
   },
   {
