--- a/content/03/04e-visualEDA.ipynb
+++ b/content/03/04e-visualEDA.ipynb
@@ -202,7 +202,7 @@
     "\n",
     "I generally want to know \n",
     "1. If a variable is numerical\n",
-    "    1. How many variables are missing and is it systematic (like in the example above)?\n",
+    "    1. How many observations are missing and is it systematic (like in the example above)?\n",
     "    1. Is it continuous or discrete?\n",
     "    1. What is the shape of a distribution (normal, binary, skewed left, skewed right, fat-tailed, etc.)?\n",
     "    2. How prevalent are outliers?\n",
