--- a/_sources/content/01/07_debugging.ipynb
+++ b/_sources/content/01/07_debugging.ipynb
@@ -217,7 +217,7 @@
     "\n",
     "## Are you still stuck?\n",
     "\n",
-    "It'll happen! We will try to build some ambitious code this semester! (Imagine trying to replicate the \"simple program\" we saw last class in Excel!) Coding complicated analysis is iterative and debugging can be [as tough as having your IT firm audited](https://media.giphy.com/media/92S5gReZGnDgY/giphy.gif).\n",
+    "It'll happen! We will try to build some ambitious code this semester! (Imagine trying to replicate the CAPM beta estimation on 500 firms in Excel!) Coding complicated analysis is iterative and debugging can be [as tough as having your IT firm audited](https://media.giphy.com/media/92S5gReZGnDgY/giphy.gif).\n",
     "\n",
     "So if you've tried the above, what can you do? \n",
     "- Writing smart code will save us from getting into intractable problems. More on that next class. \n",
