--- a/_sources/content/03/02b_pandasVocab.ipynb
+++ b/_sources/content/03/02b_pandasVocab.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "````{tabbed} Same data, but \"Wide\"\n",
     "\n",
-    "This is the exact same data, but stored as a **wide dataset.** Now, the \"key\" or \"index\" is the _year_, and each variable is duplicated for each firm. So there is a Sales variable for GM, and a Sales variable for Ford. \n",
+    "This is the exact same data, but stored as a **wide dataset.** Now, the \"key\" or \"index\" is **just** the _year_, and each variable is duplicated for each firm. So there is a Sales variable for GM, and a Sales variable for Ford. \n",
     "\n",
     "| <br> Year | Sales <br> GM| <br> Ford | Profits <br> GM| <br> Ford |\n",
     "| :--- | :--- | :--- | :--- | :--- |\n",
@@ -82,7 +82,7 @@
     "\n",
     "```{tabbed} Same data, but differently \"Wide\"\n",
     "\n",
-    "Now, the \"key\" or \"index\" is the _firm_, and each variable is duplicated for each year. So there is a Sales variable for 2000, and a Sales variable for 2001. \n",
+    "Now, the \"key\" or \"index\" is just the _firm_, and each variable is duplicated for each year. So there is a Sales variable for 2000, and a Sales variable for 2001. \n",
     "\n",
     "| <br> Firm | Sales <br> 2000 | <br> 2001 | <br> 2002 | <br> 2003 |  Profits <br> 2000 | <br> 2001 | <br> 2002 | <br> 2003 | \n",
     "| :--- | :--- | :--- | :--- | :--- |  :--- | :--- | :--- | :--- |\n",
@@ -100,7 +100,9 @@
     "    - On the main [resources page](../about/resources), there is a link to a resource I highly recommend, [Coding best practices, and project management](https://web.stanford.edu/~gentzkow/research/CodeAndData.xhtml). \"Chapter 5\" is about tidy data, even though they never use the phrase.\n",
     "- Seaborn likes plotting long data, while pandas likes plotting wide data\n",
     "\n",
-    "\n"
+    "###  How do I convert between wide and long data?\n",
+    "\n",
+    "[That's covered in the common tasks page.](02g_commontasks.html#reshaping-data)\n"
    ]
   }
  ],
