--- a/_sources/content/03/02f_chains.ipynb
+++ b/_sources/content/03/02f_chains.ipynb
@@ -6,7 +6,13 @@
    "source": [
     "# Using \"method chains\" to create more readable code\n",
     "\n",
-    "This page is about \"chaining,\" which is a _technique_ (as opposed to a function) I use when writing python code, to take advantage of this fact about python:\n",
+    "```{admonition} Suggested material\n",
+    ":class: tip\n",
+    "\n",
+    "This page is optional but suggested. It shows you _way_ to write code. But this is useful because (A) it's often easier to write and read and (B) I will use it in  class often.\n",
+    "```\n",
+    "\n",
+    "This page is about \"chaining,\" which is a technique I use when writing python code, to take advantage of this fact about python:\n",
     "```py\n",
     "( \n",
     "    # anything between these parentheses\n",
@@ -22,10 +28,12 @@
     "- lessen the need to create and mentally track temporary variables\n",
     "- are easy to debug: comment out operations that are failing until you fix them \n",
     "- you can have comments _within_ the chains (like the example above!)\n",
-    "- only temporarily modify the object, unless you name the object (like `name = ( ... )`)\n",
+    "- only temporarily modify the object, unless you name the resulting object (like `df = ( df <stuff> ... )`)\n",
     "\n",
-    "```{admonition} Let's learn about chains via example.\n",
-    ":class: warning\n",
+    "\n",
+    "```{admonition} I think it's easiest to learn about chains via example.\n",
+    ":class: note\n",
+    "\n",
     "The material chains on this page is within the \"v1.+\" tabs below.\n",
     "```"
    ]
@@ -101,7 +109,7 @@
    "source": [
     "````{tabbed} v0.1 Without chains\n",
     "\n",
-    "On one hand, this is only 4 lines of code. On the other hand, this is as readable as I could make it!\n",
+    "On one hand, this is only \"4\" lines of code. On the other hand, this is as readable as I could make it!\n",
     "\n",
     "```py\n",
     "# STEP 1: restrict by name and only keep years after 2000\n",
@@ -166,7 +174,7 @@
     "````{tabbed} v1.0 - Using chains instead\n",
     "\n",
     "**Method chaining:** Call the object (`baby_names`) and then keep calling one method on it after another. \n",
-    "- Python will call the methods from left to right. \n",
+    "- Python will call the methods from left to right, top to bottom. \n",
     "- There is no need to store the intermediate dataset (like `somenames` and `somenames_agg` above!)\n",
     "    - --> Easier to read and write without \"temp\" objects all over the place\n",
     "    - --> We don't _really_ care about `somenames_agg`\n",
@@ -178,7 +186,7 @@
     "3. Plot without saving: \"Pipe\" in the plotting function \n",
     "\n",
     "```{note} YUCK!\n",
-    "The code below produces a plot identical to V1 and V2, **but it is unreadable. Don't try - I'm about to make this readable!** Just _one more_ iteration... \n",
+    "The code below is only 2 lines, and it produces a plot identical to V1 and V2, **but it is unreadable. Don't try - I'm about to make this readable!** Just _one more_ iteration... \n",
     "```\n",
     "\n",
     "```py\n",
@@ -366,7 +374,9 @@
     "    - Use a non-pandas function (e.g. plotting, like above) on a pandas object? Use `.pipe(<>)`\n",
     "   \n",
     "```{tip}   \n",
-    "See the [common functions](02c_commonFcns) and [common tasks](02g_commontasks) pages for more methods you can use in chains and tricks to use within chains (pipe, lambda functions, etc.)!\n",
+    "See the [common tasks](02g_commontasks) page for tricks you can use within chains (pipe, csnap, lambda functions)!\n",
+    "\n",
+    "See the [common functions](02c_commonFcns) page. Any method there that can be applied to a dataframe can be used within a chain.\n",
     "```\n"
    ]
   }
