--- a/content/01/04_Markdown.ipynb
+++ b/content/01/04_Markdown.ipynb
@@ -118,11 +118,11 @@
     "![](img/why_i_am_not_sleeping.jpg)\n",
     "````\n",
     "\n",
-    "## Editing and previewing README.md files in Jupyterlab\n",
+    "## Editing markdown files in Jupyterlab\n",
     "\n",
     "In `.ipynb` files, Jupyterlab renders markdown cells nicely and easily. \n",
     "\n",
-    "If you want to edit any `.md` files in Jupyterlab and see the output immediately, use this trick:\n",
+    "If you want to edit any `.md` files (like \"README .md\" files) in Jupyterlab and see the output immediately, use this trick:\n",
     "\n",
     "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/eQsRlqK-z1c\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n"
    ]
