--- a/content/01/06_python.ipynb
+++ b/content/01/06_python.ipynb
@@ -431,7 +431,9 @@
     "2. Returns the last 2 elements.\n",
     "2. Returns the odd numbered elements (i.e. [8,6,7]).\n",
     "\n",
-    "I'd suggest putting what you just learned about how python indexes an object and how to slice a list into your personal cheat sheet until you have it memorized thoroughly. "
+    "```{tip}\n",
+    "I'd suggest putting what you just learned about how python indexes an object and how to slice a list into your personal cheat sheet until you have it memorized thoroughly. \n",
+    "```"
    ]
   },
   {
