--- a/content/03/02a_pandasTips.ipynb
+++ b/content/03/02a_pandasTips.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "```\n",
     "\n",
-    "[^knowing]: If you have a firm-year panel with sales, and you want to compute industry computation, knowing that you can run a `groupby` to reduce a firm-year panel to an industry-year panel is more important than knowing the `groupby` syntax. You can always look up syntax once you know a function is needed. \n",
+    "[^knowing]: If you have a firm-year panel with sales, and you want to compute industry competition, knowing that you can run a `groupby` to reduce a firm-year panel to an industry-year panel is more important than knowing the `groupby` syntax. You can always look up syntax once you know a function is needed. \n",
     "\n",
     "\n",
     "\n"
