unit levels and augd funcs

--- a/content/03/02c_commonFcns.ipynb
+++ b/content/03/02c_commonFcns.ipynb
@@ -39,7 +39,7 @@
     "````{dropdown} Manipulating data ⭐\n",
     "\n",
     "```{warning}\n",
-    "`df.assign(feet=df['height']//12)` will not add a \"feet\" variable to `df` permanently. If you want to save the new variable, you need to type `df = df.assign(feet=df['height']//12)`. [See the next page](02d_temp) for more. \n",
+    "`df.assign(feet=df['height']//12)` will not add a \"feet\" variable to `df` permanently. This is true of almost all dataframe methods (e.g. filter, rename, ...).  If you want to save the new variable, you need to type `df = df.assign(feet=df['height']//12)`. [See the next page](02d_temp) for more. \n",
     "```\n",
     "\n",
     "```{note}\n",
@@ -47,18 +47,18 @@
     "```\n",
     "\n",
     "\n",
-    "| Function                          | Pandas method       | Example  (see official syntax for more)                             |\n",
+    "| Function                          | Pandas method       | Examples  (see official syntax for more)                             |\n",
     "|:-----------------------------------|:---------------------|:-----------------------------------------------------------------------|\n",
     "| new variables or replace existing | assign              | `df.assign(feet=df['height']//12)` <br> `df['feet'] = df['height']//12`                                    |\n",
     "| filter or get subset of observations  <br> or, \"drop rows\"      | ⭐ query /  loc / iloc | `df.query('height > 68')`    <br> `df.loc[df['gender']=='F']`   <br> `df.iloc[1:]`                                      |\n",
-    "| get subset of columns             | filter              | `df.filter(['height','weight'])`                                      |\n",
+    "| get subset of columns             | filter              | `df.filter(['height','weight'])` <br> `df[['height','weight']]`                                     |\n",
     "| rename columns                    | rename              | `df.rename(columns={\"height\": \"how tall\"})`                 |\n",
     "| sort                              | sort_values         | `df.sort_values(['gender','weight'])`                                   |\n",
     "| do an operation on groups of observations                     | groupby ⭐             | `df.groupby(['gender'])` , see [common tasks](02g_commontasks) for more. But if you think \"I'd like to do a \"for-loop\" on this dataframe... the answer is _usually_ groupby          |\n",
     "| summary stats           | agg / pivot_table              | `df.agg({'height':[max,min,np.mean]})` <br> <br> `df.pivot_table(index='age', columns='age', values='weight')`  |\n",
     "| summary stats on groups           | agg / pivot_table              | `df.groupby(['gender'])` <br> `.agg({'height':[max,min,np.mean]})` <br> <br> `df.pivot_table(index='age', columns='age', values='weight'`  |\n",
     "| create a variable based on its group | agg+transform |  `df.groupby(['industry','year'])['leverage'].mean().transform()` <br> will add industry average leverage to your dataset for each firm |\n",
-    "| delete column                     | drop                 | `df.drop(columns=['gender'])`                                                      |\n",
+    "| delete column                     | drop                | `df.drop(columns=['gender'])`                                                      |\n",
     "| use non-pd function on df         | pipe                | `df.pipe((sns.lineplot,data),x=x,y=y)`                                |\n",
     "| combine dataframes |\tmerge\t| `pd.merge(df1,df2)` |\n",
     "| change time frequency of data | resample | `df.resample('Y').mean()` |\n",
