--- a/_sources/content/03/02e_eda_golden.ipynb
+++ b/_sources/content/03/02e_eda_golden.ipynb
@@ -23,10 +23,13 @@
    "source": [
     "````{dropdown} 1. **GOLDEN RULES for EDA**\n",
     "\n",
-    "You got new data - fun! But before you go speeding off into analysis, first you must learn some basic facts about the data. \n",
+    "You got new data - fun! But before you go speeding off into analysis, first you must learn some basic facts about the data. Reading the dataset's documentation is 10/10 a great idea (sadly though many datasets have bad documentation). \n",
     "\n",
     "You should **always, always, always** open your datasets up to physically (digitally?) look at them[^member] and then also generate summary statistics. Here are _some_ basic outputs you should examine carefully. \n",
     "\n",
+    "1. What is the unit of observation in this dataset?\n",
+    "    - The \"unit levels\" in databases we will look at are often increments of time (e.g. monthly or yearly), the type of entity (e.g. firm, person, state, country, industry), and also combinations of entity type and time. \n",
+    "    - E.g. \"firm\" level, \"firm-year\" level\n",
     "1. Print the first and last five rows: `df.head()` and `df.tail()`\n",
     "2. What is the shape (# rows and variables) of the data? `df.shape`\n",
     "1. Print the column names\n",
