--- a/content/03/02i_answers.ipynb
+++ b/content/03/02i_answers.ipynb
@@ -580,7 +580,9 @@
    "source": [
     "## Error easter-egg hunt\n",
     "\n",
-    "This code is _allllllllmost_ correct. It actually generates incorrect answers. If you figure out the problem and/or the solution, please submit an error fix via the \"edit\" button at the top of this page. "
+    "This code is _allllllllmost_ correct. It actually generates incorrect answers. If you figure out the problem and/or the solution, please submit an error fix via the \"edit\" button at the top of this page. ",
+    "\n",
+    "HINT: [ABCD](../02/10_Golden_3)"
    ]
   },
   {
