gave up on latex align

--- a/content/05/05a_compounding.ipynb
+++ b/content/05/05a_compounding.ipynb
@@ -12,18 +12,16 @@
     "\n",
     "Let $R_t = (1+r_t)$ be the **gross** (thus, the capital \"R\") return for a single period.\n",
     "\n",
-    "The **gross return** for a number of periods is\n",
+    "The **gross return** for a number of periods is \n",
     "\n",
-    "\\begin{equation*}\n",
+    "$$\n",
     "R[0,T] = \\prod_{t=1}^T R_t\n",
-    "\\end{equation*}\n",
+    "$$\n",
     "\n",
-    "and the **simple return** for the same set of periods is simply the above minus 1.\n",
-    "\n",
-    "\\begin{align*}\n",
-    "r[0,T] = & R[0,T] - 1  \\\\\n",
-    "= & (\\prod_{t=1}^T R_t) - 1\n",
-    "\\end{align*}\n",
+    "and the **simple return** for the same set of periods is simply the above minus 1: \n",
+    "$$\n",
+    "r[0,T] = \\left(\\prod_{t=1}^T R_t\\right) - 1 \n",
+    "$$\n",
     "\n",
     "We can compute this in pandas pretty easily:\n"
    ]
@@ -97,19 +95,32 @@
     "But you can add log returns across time to get the correctly compounded total log return: $ln(1+r_{[0,1]}) +ln(1+r_{[1,2]}) = ln(1+ r_{[0,2]})$\n",
     "```\n",
     "\n",
-    "This makes it easy to compound returns in large datasets another way than what I showed above. Taking advantage of the fact that $e(ln(x))=x$ (in the second line) and $e^a*e^b*e^c=e^{a+b+c}$ in the third line, we can rewrite $R[0,T]$ as:\n",
+    "This makes it easy to compound returns in large datasets another way than what I showed above. Taking advantage of the fact that $e(ln(x))=x$ (in step 2 below) and $e^a*e^b*e^c=e^{a+b+c}$ (in step 3 below), we can rewrite $R[0,T]$ as:\n",
     "\n",
-    "\\begin{align*}\n",
-    "R[0,T] = & \\prod_{t=1}^T R_t \\\\\n",
-    "       = & \\prod_{t=1}^T ( e(ln( R_t))        ) \\\\\n",
-    "       = & e(\\sum_{t=1}^T ln(R_t)) \n",
-    "\\end{align*}\n",
+    "$$ R[0,T] = \\prod_{t=1}^T R_t = \\prod_{t=1}^T ( e(ln( R_t)) ) =e(\\sum_{t=1}^T ln(R_t))$$\n",
+    "\n",
     "\n",
     "The last line shows that to compound returns, you can sum the log returns. Then to convert the compounded log return back to a simple return, just exponentiate and substract 1.\n",
     "\n",
     "```{warning}\n",
     "You can add log returns across _time_, but you can't combine log returns across assets at the time time. \n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(df\n",
+    " .assign(logR = np.log(1+df.ret))\n",
+    " # for each asset and time period\n",
+    " .groupby([\"asset\", \"timeperiod\"])\n",
+    " # sum log returns\n",
+    " ['logR'].sum()\n",
+    " .assign(ret = binlambda x: np.exp(x['logR'])-1\n",
+    ")"
    ]
   }
  ],
