Getting ready for tomorrow

--- a/handouts/Module 2 Notes.ipynb
+++ b/handouts/Module 2 Notes.ipynb
@@ -9,23 +9,24 @@
    "source": [
     "# Module 2 - Numpy, Pandas, Data EDA/Wrangling/Cleaning, Visualization\n",
     "\n",
-    "_My suggested use for this file is as an extra tab you keep open on the right side of your JupyterLab screen, and treat it like a notepad you'd use in a classroom. The left half of the screen will be good for files that have involved coding that should be stand alone files._\n",
-    "\n",
     "## Skills AND CONCEPTS to learn in this Module \n",
     "\n",
-    "You can find the tasks for this module [on the dashboard page]. \n",
+    "You can find the tasks for this module [on the dashboard page](https://ledatascifi.github.io/ledatascifi-2022/content/about/schedule.html). \n",
     "\n",
     "Below are the key skills and concepts I want you to learn in this module in _roughly_ the order we will cover them. \n",
     "\n",
     "_**Note: This list is the key stuff, but not everything. We are scraping the surface **_\n",
     "- [ ] Numpy \n",
-    "    - [ ] work on numerical operations on large arrays of numbers\n",
+    "    - [ ] fast numerical operations on large arrays \n",
     "    - [ ] produce reproducible random numbers\n",
-    "    - [ ] integrate Numpy functions on Pandas objects\n",
+    "    - [ ] know of some common numpy functions and try some\n",
+    "    - [ ] can use Numpy functions on Pandas objects\n",
     "- [ ] Pandas  \n",
-    "    - [ ] impose data into dataframes\n",
-    "    - [ ] differentiate between \"wide\" and \"tall\" data\n",
+    "    - [ ] place data into dataframes (2D tables)\n",
     "    - [ ] loading and saving data\n",
+    "    - [ ] concept: differentiate between \"wide\" and \"tall\" data\n",
+    "    - [ ] filter or slice data\n",
+    "    - [ ] create variables\n",
     "    - [ ] manipulate and reshape data within dataframes\n",
     "    - [ ] perform numerical and statistical operations on dataframes\n",
     "- [ ] Data EDA/Wrangling/Cleaning\n",
@@ -130,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
