--- a/content/05/02e_statisticalSig.ipynb
+++ b/content/05/02e_statisticalSig.ipynb
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus, the resulting table (which you can see above) displays information next to each coefficient about the level of precision associated with the estimated coefficients.\n",
+    "Thus, the table that regression produces (which you can see above by clicking the plus button) also displays information next to each coefficient about the level of precision associated with the estimated coefficients.\n",
     "\n",
     "| Column | Meaning |\n",
     "| :-- | :-- |\n",
@@ -210,7 +210,7 @@
     "2. **And if you play with a dataset long enough, you'll find \"results\"... ***\n",
     "```\n",
     "\n",
-    "### The focus on p-values can be dangerous because it distorts the incentives of researchers\n",
+    "### The focus on p-values can be dangerous because it distorts the incentives of analysts\n",
     "\n",
     "- Again: **If you torture the data, it will confess (regardless of whether you or it wanted to)**\n",
     "- **Motivated reasoning/cognitive dissonance/confirmation bias**: Analysis like [the game above](https://fivethirtyeight.com/features/science-isnt-broken/#part1) is fraught with temptations for humans. That 538 article mentions that about 2/3 of retractions are due to misconduct.\n",
@@ -224,8 +224,28 @@
     "    - The simplest version of this: Write down your data, theory, and hypothesis (it can be short!) **BEFORE** you run your tests.\n",
     "    - [This Science article](https://www.science.org/content/article/more-and-more-scientists-are-preregistering-their-studies-should-you) covers the reasoning and intuition for it\n",
     "    - [This article by Brian Nosek, one of the key voices pushing for ways to improve credibility](https://www.pnas.org/content/115/11/2600) is an instant classic\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \"Correlation is not causation\"\n",
     "\n",
+    "Surely, you've heard that. I prefer this version:\n",
+    "\n",
+    "```{epigraph}\n",
+    "Everyone who confuses correlation with causation eventually ends up dead.\n",
+    "\n",
+    "_@rauscher_emily_\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Common analytical errors\n",
     "\n",
     "Let me repost this figure from [an earlier page](01a_MLgonewrong). Notice how a focus on finding significant results can incentivize or subtly lead you towards several of these:\n",
@@ -233,7 +253,7 @@
     "```{image} img/data_fallacies_to_avoid.jpg\n",
     ":alt: flowchart\n",
     ":width: 800px\n",
-    "```\n"
+    "```"
    ]
   }
  ],
