--- a/content/03/05c_missingdata.ipynb
+++ b/content/03/05c_missingdata.ipynb
@@ -19,8 +19,8 @@
     "    - \"Complete-Case Analysis\" works well, as long as the fact that the variable is missing doesn't indicate a systematic difference between observations that are missing and those that aren't. For example, [I have research that characterizes innovation based on patent text](https://bowen.finance/bfh_data/), which gives researchers a powerful tool to examine the impacts of firm innovation. However, this dataset will lead to missing values for any firm without patents. And firms without patents are systematically differant than firms with patents.\n",
     "    - It is less common corporate finance to impute missing values. However, \"deductive imputation\" is common when the cost of doing so isn't high, like the height example above. \n",
     "    - Interpolation is done in asset pricing when it's necessary to estimate the pricing of options or other derivatives that aren't actually traded.\n",
-    "1. `df.isnull().sum` will report missing values by variable.\n",
-    "4. In general, when you can confidently deduce a value (my height this year is the same as last year because I'm a fully grown adult (mostly)), go ahead.  That is valid data.\n",
+    "1. `df.isnull().sum()` will report missing values by variable.\n",
+    "4. In general, when you can confidently deduce a value (my height this year is the same as last year because I'm a fully grown adult, mostly), go ahead.  That is valid data.\n",
     "2. With new datasets, look out for \"missing values\" that aren't missing. Some datasets use a certain number to indicate missing data (i.e. -99). Convert these to NaNs with `replace`. \n",
     "```\n",
     "\n",
