--- a/content/assignments/mid_proj.ipynb
+++ b/content/assignments/mid_proj.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Midterm - Our first real data science project\n",
+    "# Midterm aka Assignment 5 - Our first real data science project\n",
     "\n",
     "In this project, you will have to get (scrape) data, clean it yourself, and parse the data to construct measures to use in exploratory analysis. This project will show you that production-level analysis at a huge scale is within reach for everyone in class. \n",
     "\n",
