--- a/content/assignments/asgn_5-lastyear.ipynb
+++ b/content/assignments/asgn_5-lastyear.ipynb
@@ -4,11 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment 5 - Our first real data science project\n",
+    "# Midterm aka Assignment 5 - Our first real data science project\n",
     "\n",
-    "**PLEASE RECHECK THESE INSTRUCTIONS BEFORE SUBMITTING**\n",
+    "```{admonition} Tips\n",
+    ":class: tip\n",
+    "1. Read all instructions before starting.\n",
+    "1. Start early. Work on the components of the project in parallel with related class discussions.\n",
+    "1. RECHECK THESE INSTRUCTIONS BEFORE SUBMITTING\n",
+    "```\n",
     "\n",
-    "**Warning/time guidance:** This assignment is the first project where you will have to get data, clean it yourself, and parse the data to create variables to analyze. These steps take time! \n",
+    "```{warning}\n",
+    "Per the [syllabus](../about/gradeoverview), this project is 10% if your overall grade, which is about 2x the weight of a typical assignment. It will probably take 2-3x the time of a typical assignment.\n",
+    "\n",
+    "This is a full data science project. Which is really fun! You will be downloading a lot of files, parsing/exploring/cleaning those file, and then exploring the data. \n",
+    "\n",
+    "BUT: It will take time! If you start the day before it is due, YOU WILL NOT FINISH IT. If you start two days before it is do, you might finish it, but it will not be done well.\n",
+    "```\n",
+    "\n",
     "\n",
     "## Project Set Up\n",
     "\n",
@@ -16,12 +28,12 @@
     "\n",
     "- Basic question: What \"types\" of firms were hurt more or less by covid?\n",
     "- Specific questions: What risk factors were associated with better/worse stock returns around the onset of covid?\n",
-    "    - This is a \"cross-sectional event study\"\n",
+    "    - This is called a \"cross-sectional event study\"\n",
     "    - Expected minimum output: Scatterplot (x = some \"risk factors\", y = returns around March 2020) with regression lines; formatted well\n",
+    "    - Discussion of the economics linking the your risk factors to the returns is expected\n",
     "    - Pro output: Regression tables, heatmaps, better scatterplots \n",
-    "- New data science technique: Textual analysis. We will estimate \"risk factors\" from the text of S&P 500 firm's wiki pages. \n",
+    "- New data science technique: Textual analysis. We will estimate \"risk factors\" from the text of S&P 500 firm's 10-K filings. \n",
     "    - More on this below\n",
-    "    - Adv method: Estimate them from the text of S&P 500 firm's 10-K filings. \n",
     "- Data needed:\n",
     "    - Returns: Stock returns for S&P 500 firms can be pulled from Yahoo\n",
     "    - Risk factors for each firm will be created from their wikipedia pages OR their 10-K filings. Using the 10-K filings is significantly more interesting and likely to result in usable findings, but also more difficult and as such, will result in a grading premium. \n",
@@ -32,19 +44,19 @@
     "    \n",
     "```{dropdown} 1. Start the assignment \n",
     "\n",
-    "- As usual, click the link in coursesite. \n",
-    "- But unlike before, the repo will be essentially empty. This is a start to finish project, so I'm letting you dictate the structure.\n",
+    "- As usual, click the link I provide in the discussion board. \n",
+    "- But unlike before, the repo will be essentially empty. This is a start to finish project, so I'm letting you dictate the structure of the files.\n",
     "- Clone this to your computer.\n",
     "```\n",
     "\n",
-    "````{dropdown} 2. Create **download_wiki_pages.ipynb** (or **download_10Ks.ipynb**) and edit **.gitignore**\n",
+    "````{dropdown} 2. Create/edit **.gitignore** and **download_text_files.ipynb** \n",
     "\n",
     "This file \n",
     "1. Should create a subfolder for inputs (`inputs/`). You should probably save the S&P500 list from the wikipedia page. It would be especially useful to add columns to that with the URL to the wikipedia page for the firm, and one more column with the URL for the SEC filings for the firm. \n",
     "1. Should create another subfolder (`text_files/`) to hold all the text files you download. Because scraping can generate large amounts of files, I usually put it in a dedicated input folder instead of the generic input folder we just made.\n",
     "\n",
     "```{warning}\n",
-    "This file will create a large data structure with all the downloaded files. After you run this and download the files, but BEFORE you push the folder to the cloud, see the next dropdown. \n",
+    "`download_text_files.ipynb` file will create a large data structure with all the downloaded files. After you run this and download the files, but BEFORE you push the folder to the cloud, see the next dropdown. \n",
     "```\n",
     "\n",
     "**Tips/recommendations**\n",
@@ -162,6 +174,9 @@
     "\n",
     "````{dropdown} 7. Finalize and polish\n",
     "\n",
+    "Unlike previous assignments, how clean your code and report are will factor into your grade. \n",
+    "\n",
+    "\n",
     "**Edit the readme file - it should be \"publication ready\"**\n",
     "- Make the readme file informative and professional. \n",
     "- Inform them of the order in which files should be run. And warn users that this folder will download X files of X MB or GB.\n",
@@ -211,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
