--- a/content/assignments/mid_proj.ipynb
+++ b/content/assignments/mid_proj.ipynb
@@ -54,7 +54,7 @@
     "- Clone this to your computer.\n",
     "```\n",
     "\n",
-    "````{dropdown} 2. Create/edit **.gitignore** \n",
+    "````{dropdown} 2. Edit **.gitignore** \n",
     "\n",
     "The `download_text_files.ipynb` file will create a large data structure in a subfolder called `text_files/` with all the downloaded 10-K files. There will be several gigs of data in this folder. We don't want to save/push all these files to github!\n",
     "\n",
