--- a/content/assignments/mid_proj.ipynb
+++ b/content/assignments/mid_proj.ipynb
@@ -112,8 +112,7 @@
     "This file (broad steps)\n",
     "1. Creates an `output/` folder \n",
     "1. Loads the initial dataset of sample firms saved inside of `input/`.\n",
-    "1. For each firm, load the corresponding 10-K and create (at least) 5 different risk measures, and save those new measurements to each of 5 new variables in that row. See below for more on this. \n",
-    "    1. [I put up a whole webpage on this task here.](asgn05_measurerisk)\n",
+    "1. For each firm, load the corresponding 10-K and create (at least) 5 different risk measures, and save those new measurements to each of 5 new variables in that row. \n",
     "    1. **Pick one risk type, and think of three ways to measure it.** For example, there are many ways you could try to measure \"antitrust risk\", so come up with 3 different ways to measure it from the text. You can try different terms, different combinations of terms, different limits on how close terms need to be, and more. Comparing these different ways might help you understand how your choices can improve or hurt the value of your measurement. \n",
     "    2. **Pick a second risk type and create a single measure for it** (you only need to do one measurement on this risk type, but you can do more)\n",
     "    3. **Pick a third risk type and create a single measure for it** (again, you only need to do one, but you can do more)\n",
@@ -125,7 +124,7 @@
     "1. Save the whole thing to `output/sp500_accting_plus_textrisks.csv`\n",
     "\n",
     "```{note}\n",
-    "There is a bunch more on this step below the dropdowns. \n",
+    "[There is a bunch more on this file/step here.](asgn05_measurerisk)\n",
     "```\n",
     "\n",
     "```{tip}\n",
