--- a/content/assignments/mid_proj.ipynb
+++ b/content/assignments/mid_proj.ipynb
@@ -159,10 +159,15 @@
     "    - How were they measured? (Mechanical description)\n",
     "    - Why did you choose them and what do you hope they capture? (Economic reasoning)\n",
     "    - What are their statistical properties? (Do you have values for most/all firms, they should have variation within them, are they correlated with any accounting measures)\n",
-    "1. **Validation checks and discussion of the risk measurements**\n",
+    "1. **Validation checks and discussion of the risk measurements** **This step (validating the measurement) is very important in production quality analysis!***\n",
     "    - Discuss briefly whether these measurements are likely \"valid\" in the sense they capture what you hope.  \n",
-    "    - Present some evidence they do capture your hopes. (You probably don't have enough data here to rigorously validate that your measure is associated with the \"actual\" risk. But if you do, show us!) **This step (validating the measurement) is very important in production quality analysis!***\n",
-    "1. Describe the sample for your tests. (Number of firms, nature of them, summary stats.)    \n",
+    "    - Present some evidence they do capture your hopes. There are many ways to do this, and depend on the data you have and the risks you're measuring. \n",
+    "        - You might print out a few examples of matches.\n",
+    "        - One option is to show sentences that will correctly be caught by the search, and correctly not caught. And how easy is it for your search to find a sentence that matches the search but shouldn't.. (Hopefully: not too easy!) How easy is it for your search to miss a sentence that it should match...\n",
+    "        - One option is to output the list of firms that have high scores, or the industries that have high and low scores. Does the output make sense? \n",
+    "1. Describe the _final_ sample for your tests, the set of observations where you have all the data you need. \n",
+    "    - This includes summary stats,the number of firms, and other things EDA would turn up\n",
+    "    - Are there any caveats about the sample and/or data? If so, mention them and briefly discuss possible issues they raise with the analysis. \n",
     "1. Explore the correlation between your risk values and stock returns around key dates for the onset of covid. \n",
     "    - Stock returns are in the class's data folder (\"2019-2020-stock_rets cleaned.zip\")\n",
     "    - Get the firm's returns for the week of Mar 9 - Mar 13, 2020\n",
