--- a/content/04/02_strings.ipynb
+++ b/content/04/02_strings.ipynb
@@ -27,10 +27,10 @@
     "These rules should usually be followed, but there are exceptions. For example, sometimes the case of a letter matters, and sometimes keeping punctuation can help. But usually, textual analysis proceeds as follows:\n",
     "\n",
     "1. Use html tags to change/remove unneeded sections, or select the section of text that you want. If there are tables you don't want to parse or useless header or footer information, toss them out. \n",
-    "1. Remove html tags, and turn the document into a pure text string.\n",
+    "1. With what remains after step 1, remove html tags and turn the document into a pure text string.\n",
     "    ```python\n",
     "    from bs4 import BeautifulSoup \n",
-    "    BeautifulSoup(text).get_text()    \n",
+    "    BeautifulSoup(some_html).get_text()    \n",
     "    ```    \n",
     "2. Lower case everything. (Python string method: `.lower()`)\n",
     "3. Delete punctuation (I usually replace with a space). \n",
